# motest

./: README.md  pyproject.toml
.github/workflows/: test.yml
tests/: test_basics.py
